# university-courses

./: README.md  Untitled.ipynb
ML-quantificacao-incertezas-2020-PLE/: Bootstrap.ipynb  Coin.ipynb
analise-numerica-edo-2019-1/: EDOs.ipynb  Power iteration.ipynb  RK e Eulers.ipynb  Taylor.ipynb  Testes para projeto.ipynb  Untitled.ipynb  abstract.aux  abstract.fdb_latexmk  abstract.fls  abstract.tex  projeto2.aux  projeto2.fdb_latexmk  projeto2.fls  projeto2.tex  projeto2.toc  tests_for_project.ipynb
comp-cientifica-I-2018-2/: README.md  Teste8.ipynb
comp-cientifica-II-2019-2/: Lista-1-SciComp2.ipynb  Lorenz Atractor.ipynb  Project_III_Bratu_Problem_GilMiranda.ipynb  Prova1_GilMiranda.ipynb  Prova2_GilMiranda.ipynb  Stiff Equations.ipynb  The big library.ipynb
cvga-2018/: prova.aux  prova.fdb_latexmk  prova.fls  prova.tex  q1.tex
fourier/: Fourier.ipynb  Untitled.ipynb
mod-mat-financas-I-2019-1/: Binomial Model.ipynb  Projeto 2 - Gil & João.ipynb  Projeto 2.ipynb  Projeto I.ipynb  Projeto I2.ipynb  Projeto I3.ipynb  binomial.py  projeto1.aux  projeto1.fdb_latexmk  projeto1.fls  projeto1.ilg  projeto1.tex  projeto1.toc  test-codes.txt  testes_projeto2.ipynb
modelagem-matematica-2020-PLE/: 01.00-Aula1.ipynb  Blood-Feller.ipynb  (+1 more)
tmab-2018-2/estudos-dirigidos/ed-02/: CMakeLists.txt  main.cpp
tmab-2018-2/estudos-dirigidos/ed-02/includes/: Matriz.h  MatrizCol.h  MatrizDiag.h  MatrizLin.h  MatrizQuad.h  MatrizTSup.h
tmab-2018-2/estudos-dirigidos/ed-02/src/: Matriz.cpp  MatrizCol.cpp  MatrizDiag.cpp  MatrizLin.cpp  MatrizQuad.cpp  MatrizTSup.cpp
(+435 files in other folders)
